--- a/build.gradle
+++ b/build.gradle
@@ -79,5 +79,13 @@ processResources
     // copy everything else, thats not the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
+
+    }
+    rename '(.+_at.cfg)', 'META-INF/$1'
+}
+
+jar {
+    manifest {
+        attributes 'FMLAT': 'victory_royale_at.cfg'
     }
 }
