--- a/src/main/resources/victory_royale_at.cfg
+++ b/src/main/resources/victory_royale_at.cfg
@@ -1,5 +1,5 @@
-public net.minecraft.client.gui.GuiIngame field_175201_x # Title
-public net.minecraft.client.gui.GuiIngame field_175200_y # subTitle
+public net.minecraft.client.gui.GuiIngame field_175201_x # displayedTitle
+public net.minecraft.client.gui.GuiIngame field_175200_y # displayedSubTitle
 
 
 
